# pro-sumo-manager

./: .coverage_total  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  build-css.sh  pyproject.toml  requirements.txt  ruff.toml  test.sh
.claude/: CLAUDE.md  settings.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  epic.yml  story.yml  task.yml
.github/workflows/: ci.yml  claude-code-review.yml
accounts/: admin.py  apps.py  middleware.py  models.py
accounts/migrations/: 0001_initial.py
config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  apps.py  models.py  tests.py  views.py
core/enums/: __init__.py  country_enum.py  jp_prefecture_enum.py
core/migrations/: 0002_shusshin_unique_shusshin_country_except_japan_and_more.py  0003_populate_shusshin.py
coverage/: .coverage_total
docs/: ISSUE_71_IMPLEMENTATION_PLAN.md
game/: __init__.py  admin.py  apps.py  constants.py  decorators.py  models.py  tests.py  views.py
game/enums/: __init__.py  country_enum.py  division_enum.py  draft_pool_status_enum.py  jp_prefecture_enum.py  rank_enum.py
game/management/: __init__.py
game/migrations/: 0001_initial.py  0002_populate_shusshin.py  0002_shusshin_unique_shusshin_country_except_japan_and_more.py  0003_populate_divisions.py  0003_populate_shusshin.py  0004_banzuke_banzukeentry_banzuke_unique_banzuke_season_and_more.py  0004_remove_heya_is_player_controlled.py  0004_shikona.py  0005_add_banzuke_constraints.py  0005_alter_shusshin_country_code.py  0005_training_session.py  0006_bout.py  0006_shikona_parent.py  0006_training_session.py  0007_alter_shikona_parent.py  0007_merge_bout_and_training.py  0008_add_shikona_pool_fields.py  0008_draftpoolshikona.py  0008_shikona_shikona_parent_not_self.py  0009_draftpoolwrestler.py  0009_gamedate.py  0010_alter_draftpoolshikona_status_and_more.py  0010_gamedate_gamedate_current_date_idx.py  0011_division_rank_rikishi_rikishistats_and_more.py  0012_update_division_model_with_enum.py  0013_populate_divisions.py  0014_update_rank_model_with_enum.py  0015_rikishi_rikishistats_rikishi_rikishi_shikona_idx.py  0016_rikishistats_rikishistats_strength_min_and_more.py
game/models/: __init__.py  banzuke.py  bout.py  division.py  draft_pool_shikona.py  draft_pool_wrestler.py  gamedate.py  heya.py  rank.py  rikishi.py  shikona.py  shusshin.py  training.py
game/services/: __init__.py  bout_service.py  draft_pool_service.py  game_clock.py  rikishi_service.py  shikona_service.py  training_service.py
libs/: __init__.py  constants.py
tests/: __init__.py  runner.py  test_accounts.py  test_banzuke_admin.py  test_banzuke_models.py  test_bigram_table_generation.py  test_bout_admin.py  test_bout_generator.py  test_bout_model.py  test_bout_service.py  test_core_views.py  test_deepseek_client.py  test_division_model.py  test_draft_pool_models.py  test_draft_pool_service.py  test_draft_pool_shikona_model.py  test_draft_pool_wrestler_model.py  test_game_clock_service.py  test_gamedate_admin.py  test_generate_shikona_pool_command.py  test_generate_shikonas_command.py  test_name_generator.py  test_no_real_openai_calls.py  test_openai_singleton.py  test_rank_model.py  test_rikishi_generator.py  test_rikishi_service.py  test_settings.py  test_setup_draft_pool.py  test_setup_heya_name.py  test_shikona_generator.py  test_shikona_model.py  test_shikona_service.py  test_shusshin_admin.py  test_shusshin_generator.py  test_shusshin_model.py  test_training_admin.py  test_training_service.py  test_views.py
(+48 files in other folders)
