[project]
name = "pro-sumo-manager"
version = "0.0.1a1"
description = "Sumo stable management game. Run your own sumo stable. Sign prospects, plan training, set match plans, and lead your heya to the top tier of Pro Sumo."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "django-stubs>=5.2.2",
    "django-stubs-ext>=5.2.2",
    "openai>=1.101.0",
    "pycountry>=24.6.1",
    "pydantic>=2.11.7",
    "pykakasi>=2.3.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "coverage>=7.10.5",
    "mypy>=1.17.1",
    "mypy-extensions>=1.1.0",
    "pre-commit>=4.3.0",
    "ruff>=0.12.10",
]

[tool.django-stubs]
django_settings_module = "config.settings"
