[project]
name = "pro-sumo-manager"
version = "0.0.1a1"
description = "Sumo stable management game. Run your own sumo stable. Sign prospects, plan training, set match plans, and lead your heya to the top tier of Pro Sumo."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "django-stubs>=5.2.2",
    "django-stubs-ext>=5.2.2",
    "openai>=1.101.0",
    "pycountry>=24.6.1",
    "pydantic>=2.11.7",
    "pykakasi>=2.3.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "coverage>=7.10.5",
    "pre-commit>=4.3.0",
    "pyright>=1.1.390",
    "ruff>=0.12.10",
]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

include = ["config", "game", "libs", "tests"]
exclude = [
    ".venv",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "coverage",
    "**/migrations",
    "**/migrations/**",
    "**/__pycache__",
]

reportMissingImports = true
reportMissingTypeStubs = false

# Django compatibility - dynamic attributes (get_*_display, reverse relations)
reportAttributeAccessIssue = "warning"
# Django admin - using _obj for unused parameters is a common pattern
reportIncompatibleMethodOverride = "warning"
